--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,26 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render 'layouts/navbar' %>
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-2">
+          <h3>Kategorie</h3>
+          <ul class="nav nav-sidebar">
+            <% (1..9).each do |category| %>
+              <li>
+                <%= link_to "Kategoria#{category}", category_path(category) %>
+              </li>
+            <% end %>
+          </ul>
+        </div>
+        <div class="col-md-10">
+          <%= yield %>
+        </div>
+      </div>
+    </div>
+
+
   </body>
 </html>
