--- a/app/views/layouts/_navbar.erb
+++ b/app/views/layouts/_navbar.erb
@@ -4,11 +4,11 @@
       <a class="navbar-brand navbar-header" href="<%= root_path %>"> Orchid Beauty</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
-      <li class="active"><a href="#">Start</a> </li>
-      <li><a href="#">Polityka prywatności</a> </li>
-      <li><a href="#">Regulamin</a> </li>
-      <li><a href="#">Dostawa i płatności</a> </li>
-      <li><a href="#">O sklepie</a> </li>
+      <li <% if [params[:controller], params[:action]] == ["products", "index"] %> class="active" <% end %>> <%= link_to "Start", root_path %> </li>
+      <li <% if [params[:controller], params[:action]] == ["static", "privacy"] %> class="active" <% end %>> <%= link_to "Polityka prywatności", privacy_path %> </li>
+      <li <% if [params[:controller], params[:action]] == ["static", "terms"] %> class="active" <% end %>> <%= link_to "Regulamin", terms_path %> </li>
+      <li <% if [params[:controller], params[:action]] == ["static", "shipping"] %> class="active" <% end %>> <%= link_to "Dostawa", shipping_path %> </li>
+      <li <% if [params[:controller], params[:action]] == ["static", "about"] %> class="active" <% end %>> <%= link_to "O sklepie", about_path %> </li>
     </ul>
   </div>
 </nav>
