--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,9 @@
         <div class="col-md-2">
           <h3>Kategorie</h3>
           <ul class="nav nav-sidebar">
-            <% (1..9).each do |category| %>
-              <li>
-                <%= link_to "Kategoria#{category}", category_path(category) %>
+            <% Category.all.each do |category| %>
+              <li <% if @category == category %> class="active" <% end %>>
+                <%= link_to category.name, category_path(category) %>
               </li>
             <% end %>
           </ul>
