--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,11 +1,11 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-5">
-      <h1><%= Faker::Hacker.noun %></h1>
-      <p class="lead"><%= Faker::Hacker.say_something_smart %></p>
-      <%= simple_format(Faker::Lorem.paragraphs(3).join("\n\n")) %>
+      <h1><%= @product.name %></h1>
+      <p class="lead"><%= @product.description %></p>
+      <%= simple_format(@product.long_description) %>
 
-      <p class="lead"><%= number_to_currency(Faker::Number.decimal(2, 2)) %></p>
+      <p class="lead"><%= number_to_currency @product.price %></p>
       <p>
         <%= link_to "#", class: "btn btn-primary" do %>
           <%= fa_icon "shopping-basket" %> Dodaj do koszyka
@@ -13,7 +13,7 @@
       </p>
     </div>
     <div class="col-md-7">
-      <%= image_tag "http://www.wakaama.co.nz/imagecache?u=http%3A%2F%2Fs3.wakaama.co.nz%2Fstory%2F1001604%2Fphotos%2FMaungatapu_e.jpg&w=200" %>
+      <%= image_tag @product.photo.url(:medium) %>
     </div>
   </div>
 </div>
