--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Categories#show</h1>
-<p>Find me in app/views/categories/show.html.erb</p>
+<h1><%= @category.name %></h1>
+
+<%= render 'products/partial', locals: { products: @products} %>
+
+<%= paginate @products %>
