--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @category.name %></h1>
 
-<%= render 'products/partial', locals: { products: @products} %>
+<%= render 'products/products', locals: { products: @products} %>
 
 <%= paginate @products %>
