--- a/app/views/layouts/_navbar.erb
+++ b/app/views/layouts/_navbar.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-inverse navbar-static-top">
   <div class="container">
-    <div class="navbar-brand navbar-header">
-      <a class="navbar-brand navbar-header" href="<%= root_path %>"> Orchid Beauty</a>
+    <div class="navbar-header">
+      <a class="navbar-brand" href="<%= root_path %>"> Orchid Beauty</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
       <li <% if [params[:controller], params[:action]] == ["products", "index"] %> class="active" <% end %>> <%= link_to "Start", root_path %> </li>
