--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,3 @@
 <h1> Najnowsze produkty</h1>
 
-<%= render 'products/partial', locals: { products: @products} %>
+<%= render 'products/products', locals: { products: @products} %>
