Added searching form of products

--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>Admin::Categories#edit</h1>
-<p>Find me in app/views/admin/categories/edit.html.erb</p>
+<h1>Edytuj kategorię</h1>
+<%= render 'admin/categories/form', locals: { products: @product} %>
