--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -1,2 +1,2 @@
-<h1>Admin::Categories#new</h1>
-<p>Find me in app/views/admin/categories/new.html.erb</p>
+<h1>Nowa kategoria</h1>
+<%= render 'admin/categories/form', locals: { products: @product} %>
