--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
           </ul>
         </div>
         <div class="col-md-10">
+          <%= bootstrap_flash %>
           <%= yield %>
         </div>
       </div>
