--- a/app/views/order_mailer/order_cancelled.html.erb
+++ b/app/views/order_mailer/order_cancelled.html.erb
@@ -1,5 +1,1 @@
-<h1>Order#order_cancelled</h1>
-
-<p>
-  <%= @greeting %>, find me in app/views/order_mailer/order_cancelled.html.erb
-</p>
+<p> Zamówienie zostało anulowane!</p>
