--- a/app/views/order_mailer/order_confirmation.html.erb
+++ b/app/views/order_mailer/order_confirmation.html.erb
@@ -1,5 +1,1 @@
-<h1>Order#order_confirmation</h1>
-
-<p>
-  <%= @greeting %>, find me in app/views/order_mailer/order_confirmation.html.erb
-</p>
+<p> Dziękujemy za zamówienie !</p>
