--- a/app/views/order_mailer/order_in_progress.html.erb
+++ b/app/views/order_mailer/order_in_progress.html.erb
@@ -1,5 +1,1 @@
-<h1>Order#order_in_progress</h1>
-
-<p>
-  <%= @greeting %>, find me in app/views/order_mailer/order_in_progress.html.erb
-</p>
+<p> Zamówienie zostało przekazane do realizacji!</p>
