--- a/app/views/order_mailer/order_shipped.html.erb
+++ b/app/views/order_mailer/order_shipped.html.erb
@@ -1,5 +1,1 @@
-<h1>Order#order_shipped</h1>
-
-<p>
-  <%= @greeting %>, find me in app/views/order_mailer/order_shipped.html.erb
-</p>
+<p> Zamówienie zostało wysłane na adres!</p>
