Added order to admin panel

--- a/app/views/layouts/_navbar_admin.erb
+++ b/app/views/layouts/_navbar_admin.erb
@@ -6,6 +6,7 @@
     <ul class="nav navbar-nav navbar-right">
       <li <% if [params[:controller]] == ["admin/products"] %> class="active" <% end %>> <%= link_to "Produkty", admin_products_path %> </li>
       <li <% if [params[:controller]] == ["admin/categories"] %> class="active" <% end %>> <%= link_to "Kategorie", admin_categories_path %> </li>
+      <li <% if [params[:controller]] == ["admin/orders"] %> class="active" <% end %>> <%= link_to "Zamówienia", admin_orders_path %> </li>
     </ul>
   </div>
 </nav>
