Added account edition for current user.

--- a/app/views/layouts/_navbar.erb
+++ b/app/views/layouts/_navbar.erb
@@ -10,6 +10,7 @@
       <li <% if [params[:controller], params[:action]] == ["static", "shipping"] %> class="active" <% end %>> <%= link_to "Dostawa", shipping_path %> </li>
       <li <% if [params[:controller], params[:action]] == ["static", "about"] %> class="active" <% end %>> <%= link_to "O sklepie", about_path %> </li>
       <% if current_user %>
+        <li class="nav-item"><%= link_to "Moje konto", account_show_path, method: :get, class: 'nav-link' %> </li>
         <li class="nav-item"><%= link_to "Wyloguj się", destroy_user_session_path, method: :delete, class: 'nav-link' %> </li>
       <% else %>
         <li class="nav-item"><%= link_to "Logowanie", new_user_session_path, class: 'nav-link' %> </li>
